UI glitch after pressing Preferences - "Reset to Defaults" entry #64642

Closed
opened 2019-05-15 10:10:08 +02:00 by Martin Capitanio · 7 comments

System Information
Operating system: Linux

Blender Version
Broken: 6f9819e5fd

Exact steps for others to reproduce the error

  • load factory settings
  • switch the 3d view port to preferences
  • chose the "Reset to Defaults" entry

blender8-fa-settings.png

**System Information** Operating system: Linux **Blender Version** Broken: 6f9819e5fd **Exact steps for others to reproduce the error** * load factory settings * switch the 3d view port to preferences * chose the "Reset to Defaults" entry ![blender8-fa-settings.png](https://archive.blender.org/developer/F7038463/blender8-fa-settings.png)

Added subscriber: @capnm

Added subscriber: @capnm
Martin Capitanio changed title from UI glitch after pressing "Load Factory Settings" button to UI glitch after pressing Preferences - "Reset to Defaults" entry 2019-05-15 10:58:23 +02:00

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
Campbell Barton was assigned by William Reynish 2019-05-15 11:04:24 +02:00

Can confirm. Curious.

Also, it screws up HiDPI. As soon as you resize the window to refresh it, things go back to normal.

It seems as if Reset to Defaults does something odd, although only when executed when Preferences is used as an editor in the main workspace.

Can confirm. Curious. Also, it screws up HiDPI. As soon as you resize the window to refresh it, things go back to normal. It seems as if Reset to Defaults does something odd, although only when executed when Preferences is used as an editor in the main workspace.

Added subscriber: @jenkm

Added subscriber: @jenkm

Also, after pressing the "Revert Preferences" button in the Preferences window the Blender main window freezes, although the Preferences window continues to work.
If open the Preferences editor inside the main window, this does not happen.

f070bdd7c9

Also, after pressing the "Revert Preferences" button in the Preferences window the Blender main window freezes, although the Preferences window continues to work. If open the Preferences editor inside the main window, this does not happen. f070bdd7c9c4

This issue was referenced by 62ac2fddf7

This issue was referenced by 62ac2fddf7d9b3ff3ee3f1d2d92f106a3d3d393c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64642
No description provided.