Fix T64642: Reset to default preferences glitch